* Add endorsements entry point
* Add Manage Contacts endorsement
* Add recalculate contract step
* Allow to properly chain endorsements

Version 1.6 - 2015-12-23
* Add Manage options endorsement
* Add contract subscriber change endorsement
* The relation field is set to new record on applied endorsements adding a new record, and removed on cancellation
* Endorsement Step defines if the Endorsement Part can handle several instances.

Version 1.4 - 2015-05-29
* Use rich text format for endorsement summary
* Add void endorsement
* Make endorsement printable
* Add terminate_contract endorsement
* Add extra_data endorsement
* Add endorsement number
* Allow to trigger calculate after application
* Allow to specify restoration order

Version 1.3 - 2015-01-22
* Configure relation_mixin for export import
* Add sub-state to endorsement
* Allow to revert back to the version before the endorsement application
* Add rollback_date
* Add in_progress status for endorsements
* Improve endorsement engine

Version 1.2 - 2014-07-01
* Changelog file creation